@@ -724,3 +724,7 @@ ConfigView.section.tracker.main=Main
 ConfigView.section.tracker.web=Web
 ConfigView.label.prioritizefirstpiece=Prioritize first piece of file(s)
 ConfigView.label.prioritizefirstpiece.tooltip=Attempts to download the very beginning of a file first.\nFor support of early previewing.
+ConfigView.section.file.confirm_data_delete=Confirm when deleting data
+ConfigView.section.file.confirm_data_delete.tooltip=Confirm data deletion when using 'Remove and Delete...'
+
+
